--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=home/">
+    <meta http-equiv="refresh" content="0; url=https://lnwaitji.github.io/Home/index.html">
   </head>
   <body>
     <p>Redirecting...</p>
