--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://lnwaitji.github.io/Home/index.html">
+    <meta http-equiv="refresh" content="0; url=https://lnwaitji.github.io/Home/">
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>Website Redirecting...</p>
   </body>
 </html>
