--- a/Project/index.html
+++ b/Project/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>AitJi's ProJect</title>
+    <title>[Project] AitJi's ProJect</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
