--- a/Project/CMGMMO/index.html
+++ b/Project/CMGMMO/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>CMGMMO ProJect</title>
+    <title>[ProJect] CMGMMO ProJect</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
