--- a/Home/index.html
+++ b/Home/index.html
@@ -1,29 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>[Home] AitJi's Connections</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Hi there! 🐾 I'm AitJi!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/png" href="icon.png">  
 </head>
 
 <body>
-    <div class="container">
-        <img src="../InwAitJi.png" alt="AitJi Gamer" width="200" height="200">
-        <h1>AitJi's Connections</h1>
-        <p>Welcome to my connections!
-            if you have to connections me you can use
-            all of this OvO
-        </p>
-        <p>
-            <a href="https://www.youtube.com/channel/UCphyxbOnunOu0FcNLYPPXJw?sub_confirmation=1"
-                class="button">YouTube</a>
-            <a href="https://github.com/lnwAitJi" class="button">GitHub</a>
-            <a href="../Project/" class="button">Project..</a>
-        </p>
-    </div>
+    <main>
+        <div class="form">
+            <form>
+                <header>
+                    <h1>Hi there! 🐾 I'm AitJi!</h1>
+                </header>
+                <h2>Programming Languages 💻</h2>
+                <p>Here are the programming languages that I am familiar with:</p>
+                <ul>
+                    <li>PHP</li>
+                    <li>Python</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Node.js</li>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                </ul>
+                <section>
+                    <h2>Follow Me on Social Media! 📱</h2>
+                    <ul>
+                        <li>Github: <a href="https://github.com/lnwAitJi">lnwAitJi</a></li>
+                        <li>YouTube: <a href="https://www.youtube.com/@InwAitJi">AitJi Gamer</a></li>
+                        <li>Xbox: <a href="https://youtu.be/xvFZjo5PgG0">AitJi Gamer</a></li>
+                        <li>Omelet: <a href="https://omlet.gg/profile/inw_aitji">inwaitji</a></li>
+                        <li>Discord: ! AitJi Gamer !#4753</li>
+                    </ul>
+                    <p>Let's connect and explore the world of code and gaming together! 🌎🎮</p>
+                </section>
+                <div style="display: flex; flex-direction: row;">
+                    <button style="margin-right: 10px;" onclick="window.open('https://github.com/lnwAitJi', '_blank')">
+                        Github </button>
+                    <button style="margin-right: 10px;"
+                        onclick="window.open('https://www.youtube.com/@InwAitJi/', '_blank')"> YouTube </button>
+                    <button style="margin-right: 10px;"
+                        onclick="window.open('https://omlet.gg/profile/inw_aitji', '_blank')"> Omelet </button>
+                    <button style="margin-right: 10px;" onclick="window.open('https://bit.ly/3L2cp2O', '_blank')"> Xbox
+                    </button>
+                    <button style="margin-right: 10px;"
+                        onclick="window.open('https://discord.gg/XmbHgkUMKE', '_blank')"> Discord </button>
+                </div>
+            </form>
+        </div>
+        <section>
+        </section>
+    </main>
 </body>
-
 </html>
