--- a/Home/index.html
+++ b/Home/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi there! 🐾 I'm AitJi!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" type="image/png" href="icon.png">  
