Redirecting page mobile support and p > h1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=https://lnwaitji.github.io/Home/">
   </head>
   <body>
-    <p>Website Redirecting...</p>
+    <h1>Website Redirecting...</h1>
   </body>
 </html>
