Dark Mode + Better

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=xvFZjo5PgG0">
-  </head>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minecraft</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" href="../profile.png">
+</head>
+
+<body>
+
+    <main>
+        <div class="container">
+            <img src="../profile.png" alt="Profile Picture" class="profile-pic">
+            <h2>Hi there! 🐾 I'm AitJi</h2>
+            <p>I'm now on main scripting on "CMGMMO" Minecraft Bedrock Server
+                Do you want to play, Here is this "IP/PORT"
+                IP: svmcsv.fun
+                PORT: 15913
+            </p>
+            <h2>You don't have time?</h2>
+            <p>then just add server and some back when you have enough time</p>
+            <p>by one-click on this belows Button to connect/add server</p>
+            <button id="connect">Add Server</button>
+            <button id="cmgmmodis">Join Discord</button>
+            <button id="back">Back..</button>
+            <div id="overlay"></div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 AitJi Gamer. All rights reserved.</p>
+    </footer>
+    <script src="../script.js"></script>
+</body>
+
 </html>
