--- a/database/index.html
+++ b/database/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-  <title>InwAitJi's Database</title>
+  <title>Databse</title>
   <style>
     body {
       background-color: #000000;
@@ -14,8 +13,8 @@
     }
 
     iframe {
-      width: 100%;
-      height: 100%;
+      width: 800px;
+      height: 450px;
       border: none;
     }
   </style>
