--- a/givegen/index.html
+++ b/givegen/index.html
@@ -18,13 +18,13 @@
         <label for="canPlace">Can Place On:</label>
         <div id="canPlaceContainer">
             <input type="text" id="canPlace" placeholder="Block Type">
-            <button type="button" onclick="addCanPlace()">+</button>
+            <button type="button">+</button>
         </div>
         <br>
         <label for="canDestroy">Can Destroy:</label>
         <div id="canDestroyContainer">
             <input type="text" id="canDestroy" placeholder="Block Type">
-            <button type="button" onclick="addCanDestroy()">+</button>
+            <button type="button">+</button>
         </div>
         <br>
         <button type="button" onclick="generateCommand()">Generate Command</button>
