Add Count Id at Html

--- a/givegen/index.html
+++ b/givegen/index.html
@@ -12,6 +12,12 @@
         <label for="itemType">Item Type:</label>
         <input type="text" id="itemType" placeholder="Item Type">
         <br>
+        <label for="count">Item Count:</label>
+        <input type="text" id="count" placeholder="Item Count">
+        <br>
+        <label for="id">Item Count:</label>
+        <input type="text" id="id" placeholder="Item Id">
+        <br>
         <label for="playerName">Player Name:</label>
         <input type="text" id="playerName" placeholder="Player Name" value="@p">
         <br>
