--- a/givegen/index.html
+++ b/givegen/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Minecraft Bedrock Give Command Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-
 <body>
     <h1></h1>
     <form>
@@ -15,7 +13,7 @@
         <label for="count">Item Count:</label>
         <input type="text" id="count" placeholder="Item Count">
         <br>
-        <label for="id">Item Count:</label>
+        <label for="id">Item Id:</label>
         <input type="text" id="id" placeholder="Item Id">
         <br>
         <label for="playerName">Player Name:</label>
@@ -39,5 +37,4 @@
     </form>
     <script src="./script.js"></script>
 </body>
-
 </html>
