--- a/givegen/index.html
+++ b/givegen/index.html
@@ -8,16 +8,16 @@
     <h1></h1>
     <form>
         <label for="itemType">Item Type:</label>
-        <input type="text" id="itemType" placeholder="Item Type">
+        <input type="text" id="itemType" placeholder="Item Type" value="minecraft:air">
         <br>
         <label for="count">Item Count:</label>
-        <input type="text" id="count" placeholder="Item Count">
+        <input type="text" id="count" placeholder="Item Count" value="1">
         <br>
         <label for="id">Item Id:</label>
-        <input type="text" id="id" placeholder="Item Id">
+        <input type="text" id="id" placeholder="Item Id" value="0">
         <br>
         <label for="playerName">Player Name:</label>
-        <input type="text" id="playerName" placeholder="Player Name" value="@p">
+        <input type="text" id="playerName" placeholder="Player Name" value="@s">
         <br>
         <label for="canPlace">Can Place On:</label>
         <div id="canPlaceContainer">
