--- a/givegen/index.html
+++ b/givegen/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Minecraft Bedrock Give Command Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="icon" href="./icon.png" type="./icon.png">
 </head>
 <body>
     <h1></h1>
