--- a/givegen/index.html
+++ b/givegen/index.html
@@ -36,6 +36,7 @@
         <button type="button" onclick="generateCommand()">Generate Command</button>
         <br>
         <textarea id="commandOutput" rows="5" cols="50" readonly></textarea>
+        <button type="button" onclick="copyCommandOutput()">Copy</button>
     </form>
     <script src="./script.js"></script>
 </body>
