--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -77,12 +77,11 @@
 <body>
     <main>
         <div class="container">
-            <img src="../../profile.png" alt="Profile Picture" class="profile-pic">
             <h2>Hi there! 🐾 I'm AitJi</h2>
             <p>I want to connect to your Minecraft server. Here are the instructions to add it:</p>
             <div id="instructions"></div>
-            <img src="./ip.png" alt="Server IP" class="server-ip">
             <button onclick="openMinecraft()">✅</button>
+            <img src="./ip.png" alt="Profile Picture" class="profile-pic">
         </div>
     </main>
 </body>
