--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connection CMGMMO</title>
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" href="../../profile.png">
+    <link rel="icon" href="./cmg.png">
     <style>
         .server-details {
             border: 1px solid #ccc;
@@ -136,7 +136,7 @@
 <body>
     <main>
         <div class="container">
-            <img src="../../profile.png" alt="Profile Picture" class="profile-pic">
+            <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>Hi there! 🐾 I'm AitJi</h2>
             <p>I want to connect to your Minecraft server. Can you press the "✅" button below?</p>
             <div id="instructions"></div>
