--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -137,7 +137,7 @@
     <main>
         <div class="container">
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
-            <h2>Hi there! 🐾 I'm AitJi</h2>
+            <h2>Hi there!</h2>
             <p>I want to connect to your Minecraft server. Can you press the "✅" button below?</p>
             <div id="instructions"></div>
             <br>
