--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -104,8 +104,8 @@
                         <h3>Server Details:</h3>
                         <ul>
                             <li><strong>Server Name:</strong> CMGMMO Server</li>
-                            <li><strong>Server Address:</strong> mcsv.fun</li>
-                            <li><strong>Port:</strong> 15913</li>
+                            <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
+                            <li><strong>Port:</strong> 21356</li>
                         </ul>
                     </div>
                     <p>Tap "Add Server" to save the server.<br>
@@ -113,7 +113,7 @@
                     <p>Once you've followed these steps, you should be able to connect to the CMGMMO Server in Minecraft. Enjoy!</p>
                 `;
             } else {
-                window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO%20§iServer|mcsv.fun:15913';
+                window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO%20§iServer|cmgmmo.mc.in.th:21356';
                 instructions.innerHTML = `
                     <p>If you're not on an iOS device and can't go to the server, try clicking the ✅ button.</p>
                     <p>If it still doesn't work, here are the details you'll need:</p>
@@ -121,8 +121,8 @@
                         <h3>Server Details:</h3>
                         <ul>
                             <li><strong>Server Name:</strong> CMGMMO Server</li>
-                            <li><strong>Server Address:</strong> mcsv.fun</li>
-                            <li><strong>Port:</strong> 15913</li>
+                            <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
+                            <li><strong>Port:</strong> 21356</li>
                         </ul>
                     </div>
                 `;
