--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -127,19 +127,10 @@
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>@CMGMMO!</h2>
             <p>This is Page to add a Minecraft Bedrock Server "CMGMMO"</p>
-            <h1>Now Online: <span id="playerCount">0</span>/30</h1>
-            <div class="server-details">
-                <ul>
-                    <li><strong>Server Name:</strong> CMGMMO Server</li>
-                    <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>Port:</strong> 21356</li>
-                </ul>
-            </div>
-            <div id="instructions"></div>
+            <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
-            <button id="connect-button" onclick="openMinecraft()">✅</button>
+            <button id="connect-button" onclick="openMinecraft()">Add Seever✅</button>
             <br>
-            <img src="./ip.png" alt="Server IP" class="profile-image">
             <script src="script.js"></script>
         </div>
     </main>
