--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -129,7 +129,7 @@
             <p>This is Page to add a Minecraft Bedrock Server "CMGMMO"</p>
             <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
-            <button id="connect-button" onclick="openMinecraft()">Add Seever✅</button>
+            <button id="connect-button" onclick="openMinecraft()">Add Server✅</button>
             <br>
             <script src="script.js"></script>
         </div>
