--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +7,58 @@
     <link rel="stylesheet" href="../../styles.css">
     <link rel="icon" href="./cmg.png">
     <style>
-        h3 {
-            color: #e8e8e8;
+        body {
+            background-color: #333;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        h2 {
+            color: #e8e8e8;
+            margin-top: 0;
+        }
+
+        p {
+            color: #e8e8e8;
+            margin: 10px 0;
+        }
+
+        #playerCount {
+            color: #00ff00;
+            font-weight: bold;
+        }
+
+        button {
+            background-color: #00ff00;
+            color: #333;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        button:hover {
+            background-color: #009900;
+        }
+
         .server-details {
             color: #e8e8e8;
             border: 1px solid #2d2d2d;
@@ -38,32 +86,15 @@
             margin-bottom: 5px;
         }
 
-        .container {
-            color: #e8e8e8;
+        footer {
             text-align: center;
-            margin-top: 50px;
-        }
-
-        .profile-pic {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        .profile-image {
+            background-color: #2d2d2d;
+            color: #e8e8e8;
+            padding: 10px 0;
+            position: absolute;
+            bottom: 0;
             width: 100%;
-            max-width: 300px;
-            height: auto;
-            margin-top: 20px;
         }
-
-        @media only screen and (max-width: 600px) {
-            .container {
-                margin-top: 20px;
-            }
-        }
-
         .fade-in {
             animation: fade-in 1s ease-in-out;
         }
@@ -73,7 +104,6 @@
                 opacity: 0;
                 transform: translateY(-20px);
             }
-
             100% {
                 opacity: 1;
                 transform: translateY(0);
@@ -88,7 +118,6 @@
             0% {
                 transform: rotate(0);
             }
-
             100% {
                 transform: rotate(360deg);
             }
@@ -104,39 +133,44 @@
 
             if (isIOS) {
                 instructions.innerHTML = `
-                <p>Sorry, now you are using ios so i can't add server automatically
-                    'please add server by yourself'</p>
+                <p>Sorry, now you are using iOS so I can't add the server automatically.
+                Please add the server manually.</p>
                 `;
             } else {
                 window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
                 instructions.innerHTML = `
-                    <p>Look Like you didn't teleport to Minecraft?</p>
-                    <p>'please add server by yourself'</p>
+                    <p>Look like you didn't teleport to Minecraft?</p>
+                    <p>Please add the server manually.</p>
                 `;
             }
             instructions.classList.add('fade-in');
             button.classList.add('rotate');
         }
-        instructions.classList.add('fade-in');
     </script>
 </head>
-
 <body>
     <main>
         <div class="container">
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>@CMGMMO!</h2>
-            <p>This is Page to add a Minecraft Bedrock Server "CMGMMO"</p>
+            <p>This is a page to add the Minecraft Bedrock Server "CMGMMO".</p>
             <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server✅</button>
             <br>
-            <script src="script.js"></script>
+            <div class="server-details">
+                <h3>Server Details:</h3>
+                <ul>
+                    <li><strong>Server Name:</strong> CMGMMO Server</li>
+                    <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
+                    <li><strong>Port:</strong> 21356</li>
+                </ul>
+            </div>
+            <div id="instructions"></div>
         </div>
     </main>
     <footer>
         <p>&copy; CMGMMO. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
