--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./cmg.png">
     <style>
         body {
-            background-color: #333;
+            background-color: #f4f4f4;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -22,20 +22,20 @@
         }
 
         .container {
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: #fff;
             padding: 20px;
             border-radius: 10px;
             text-align: center;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
-            color: #e8e8e8;
+            color: #333;
             margin-top: 0;
         }
 
         p {
-            color: #e8e8e8;
+            color: #555;
             margin: 10px 0;
         }
 
@@ -46,7 +46,7 @@
 
         button {
             background-color: #00ff00;
-            color: #333;
+            color: #fff;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
@@ -60,36 +60,35 @@
         }
 
         .server-details {
-            color: #e8e8e8;
-            border: 1px solid #2d2d2d;
+            color: #555;
+            border: 1px solid #ccc;
             border-radius: 5px;
             padding: 10px;
             margin-top: 20px;
-            background-color: #2d2d2d;
+            background-color: #f4f4f4;
         }
 
         .server-details h3 {
-            color: #e8e8e8;
-            margin-top: 0;
             color: #333;
+            margin-top: 0;
         }
 
         .server-details ul {
-            color: #e8e8e8;
+            color: #555;
             list-style-type: none;
             padding: 0;
             margin: 0;
         }
 
         .server-details li {
-            color: #e8e8e8;
+            color: #555;
             margin-bottom: 5px;
         }
 
         footer {
             text-align: center;
-            background-color: #2d2d2d;
-            color: #e8e8e8;
+            background-color: #f4f4f4;
+            color: #555;
             padding: 10px 0;
             position: absolute;
             bottom: 0;
