--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./cmg.png">
     <style>
         body {
-            background-color: #f4f4f4;
+            background-color: #333232;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -22,7 +22,7 @@
         }
 
         .container {
-            background-color: #fff;
+            background-color: #2e2d2d;
             padding: 20px;
             border-radius: 10px;
             text-align: center;
@@ -30,17 +30,17 @@
         }
 
         h2 {
-            color: #333;
+            color: #e0dede;
             margin-top: 0;
         }
 
         p {
-            color: #555;
+            color: #e0dede;
             margin: 10px 0;
         }
 
         #playerCount {
-            color: #00ff00;
+            color: #189618;
             font-weight: bold;
         }
 
@@ -65,30 +65,30 @@
             border-radius: 5px;
             padding: 10px;
             margin-top: 20px;
-            background-color: #f4f4f4;
+            background-color: #5c5b5b;
         }
 
         .server-details h3 {
-            color: #333;
+            color: #f5f2f2;
             margin-top: 0;
         }
 
         .server-details ul {
-            color: #555;
+            color: #bfbdbd;
             list-style-type: none;
             padding: 0;
             margin: 0;
         }
 
         .server-details li {
-            color: #555;
+            color: #bfbdbd;
             margin-bottom: 5px;
         }
 
         footer {
             text-align: center;
-            background-color: #f4f4f4;
-            color: #555;
+            background-color: #333232;
+            color: #f4f4f4;
             padding: 10px 0;
             position: absolute;
             bottom: 0;
