--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -45,7 +45,7 @@
         }
 
         button {
-            background-color: #00ff00;
+            background-color: #1d6e32;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -56,7 +56,7 @@
         }
 
         button:hover {
-            background-color: #009900;
+            background-color: #185728;
         }
 
         .server-details {
