--- a/Server/index.html
+++ b/Server/index.html
@@ -39,6 +39,7 @@
             overflow-wrap: break-word;
             animation: fadeIn 1s ease-out;
             position: relative;
+            overflow: auto;
         }
 
         .server-details p {
@@ -149,7 +150,7 @@
         </div>
         <div class="content">
             <input type="text" id="serverIp" placeholder="Enter Server IP">
-            <input type="text" id="serverPort" placeholder="Enter Server Port (default: 19132)">
+            <input type="number" id="serverPort" placeholder="Enter Server Port (default: 19132)" min="1" max="65535">
             <button id="fetchButton">Fetch Details</button>
             <div class="server-details" id="serverDetails">
                 <div class="loading" id="loadingIcon"><i class="fas fa-spinner fa-spin"></i></div>
