sus Server button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <p>Discord: ! AitJi Gamer !#4753</p>
 
             <button id="project">ProJect</button>
+            <button id="server">Server?</button>
 
             <div id="overlay"></div>
         </div>
