i lazy to fix so back to normal..

--- a/Server/index.html
+++ b/Server/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="content">
             <input type="text" id="serverIp" placeholder="Enter Server IP">
-            <input type="number" id="serverPort" placeholder="Enter Server Port (default: 19132)" min="1" max="65535">
+            <input type="text" id="serverPort" placeholder="Enter Server Port (default: 19132)">
             <button id="fetchButton">Fetch Details</button>
             <div class="server-details" id="serverDetails">
                 <div class="loading" id="loadingIcon"><i class="fas fa-spinner fa-spin"></i></div>
