Red Back Button

--- a/Minecraft/CMGMMO/index.html
+++ b/Minecraft/CMGMMO/index.html
@@ -46,18 +46,12 @@
         }
 
         button {
-            background-color: #1d6e32;
             color: #fff;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
             cursor: pointer;
             font-size: 16px;
-            transition: background-color 0.3s ease-in-out;
-        }
-
-        button:hover {
-            background-color: #185728;
         }
 
         .server-details {
@@ -185,7 +179,9 @@
             <p>This is a page to add the Minecraft Bedrock Server "CMGMMO".</p>
             <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
-            <button id="connect-button" onclick="openMinecraft()">Add Server✅</button>
+            <button id="connect-button" onclick="openMinecraft()">Add Server</button>
+            <button id="cmgmmodis">Join Discord</button>
+            <button id="back">Back..</button>
             <br>
             <div class="server-details">
                 <h3>Server Details:</h3>
