--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -15,11 +15,10 @@
         <div class="container">
             <img src="../profile.png" alt="Profile Picture" class="profile-pic">
             <h2>Hi there! 🐾 I'm AitJi</h2>
-            <p>I'm now on main scripting on "CMGMMO" Minecraft Bedrock Server
-                Do you want to play, Here is this "IP/PORT"
-                IP: svmcsv.fun
-                PORT: 15913
-            </p>
+            <p>I'm now on main scripting on "CMGMMO" Minecraft Bedrock Server</p>
+            <p>Do you want to play, Here is this "IP/PORT"</p>
+            <p>IP: svmcsv.fun</p>
+            <p>PORT: 15913</p>
             <h2>You don't have time?</h2>
             <p>then just add server and some back when you have enough time</p>
             <p>by one-click on this belows Button to connect/add server</p>
